2001-05-31  Derek Price  <dprice@collab.net>

	* sanity.sh (rcs2-7): Add today to the list of failure dates for rcs2-7
	in the hopes that the data will eventually prove useful to someone
	motivated enough to fix the problem.

2001-05-30  Derek Price  <dprice@collab.net>

	* stamp-h2.in: Regenerated.

2001-05-30  Derek Price  <dprice@collab.net>

	* *: Various bug fixes and comments for the following
	patch from Donald Sharp <sharpd@cisco.com>:

	* checkout.c (safe_location): cvs co -d <directory> still had
	failure modes from the way the -d option works.
	* sanity.sh: Misc error message resynching.

2001-05-29  Derek Price  <dprice@collab.net>

	* Makefile.am (cvs_SOURCES): Add root.h.

	* Makefile.in: Regenerated.
	* stamp-h2.in: Regenerated.

2001-05-29  Derek Price  <dprice@collab.net>

	* checkout.c (safe_location): Correct formatting.

2001-05-29  Derek Price  <dprice@collab.net>

	* root.c (parse_cvsroot): Fix a comment.

2001-05-26  Larry Jones  <larry.jones@sdrc.com>

	* checkout.c (safe_location): Use old-style definition to keep
	non-ANSI compilers happy.

	* sanity.sh (check_respository): Use ${CVSROOT_DIRNAME} instead
	of /tmp/cvs-sanity/cvsroot.

2001-05-25  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (modules5): Add sleep to script to help avoid out of
	order messages.

	* filesubr.c (mkdir_if_needed): Return 1 if the directory exists
	reguardless of what errno is set to.
	(Reported by "Robinson, Greg" <greg.robinson@dsto.defence.gov.au>.)

2001-05-25  Derek Price  <dprice@collab.net>
	for Donald Sharp  <sharpd@cisco.com>

	* checkout.c:  Modified safe_location() to refuse checkout if
	the -d option to co specifies inside of the repository.
	* import.c:  New parameter to safe_location needed to be added.
	* cvs.h:  New parameter to safe_location needed to be added.
	* sanity.sh:  Test case to test for failure mode.

2001-05-23  Larry Jones  <larry.jones@sdrc.com>

	* checkout.c (checkout_proc): Don't build top_level_admin directory