@@ -1,3 +1,9 @@
+2001-06-05  Derek Price  <dprice@collab.net>
+
+	* sanity.sh (crerepos-6a): Set CVS_RSH=/bin/false...  this is a local
+	mode only test anyhow.
+	(Thanks to Larry Jones and Morgan Burke <morgan@sitka.triumf.ca>.)
+
 2001-05-31  Derek Price  <dprice@collab.net>
 
 	* sanity.sh (rcs2-7): Add today to the list of failure dates for rcs2-7
